2008-05-01  Paolo Borelli  <pborelli@katamail.com>

	* src/baobab-utils.c:
	* src/baobab.c:
	* src/baobab.h:
	* src/callbacks.c:
	Rename "start_proc_on_location" to "baobab_scan_location" for
	consistency with the rest of the API and move the stop_scan method
	to the main baobab API.

2008-05-01  Paolo Borelli  <pborelli@katamail.com>

	* src/baobab-utils.c:
	* src/baobab.c:
	* src/baobab.h:
	* src/baobab-prefs.c:
	* src/baobab-scan.c:

	Make the list of excluded dirs private to baobab.c in preparation
	to turn it into a list of GFiles.

2008-04-29  Paolo Borelli  <pborelli@katamail.com>

	* src/baobab-remote-connect-dialog.c:
	* src/baobab-remote-connect-dialog.h:
	Add a getter for the selected uri instead of abusing of 
	'last_scan_command'

	* src/baobab-utils.c:
	use baobab_rescan_current_dir instead of open coding it

	* src/baobab.c:
	* src/baobab.h:
	Remove last_scan_command and use a private GFile location to remember
	the current scan. Factor out functions to scan home and root.

	* src/callbacks.c
	Adapt to the above changes

2008-04-30  Fabio Marzocca  <thesaltydog@gmail.com>

	* src/baobab-prefs.c: (fill_props_model):
	* src/baobab.c: (baobab_init), (baobab_shutdown):
	* src/callbacks.c: (volume_changed), (contents_changed_cb):
	* src/callbacks.h:

	Gio migration
		
2008-04-29  Fabio Marzocca  <thesaltydog@gmail.com>

	* src/baobab-treeview.c: (on_tv_button_press):
	* src/baobab-utils.c: (filechooser_cb), (show_bars),
	(baobab_check_dir), (set_label_scan), (open_file_with_application),
	(trash_file), (contents_changed):
	* src/baobab-utils.h:
	* src/baobab.c: (start_proc_on_location), (rescan_current_dir),
	(baobab_init), (start_proc_on_command_line):
	* src/baobab.h:
	* src/callbacks.c: (on_menuscanhome_activate),
	(on_menuallfs_activate), (on_tbscanhome_clicked),
	(on_tbscanall_clicked), (on_tb_scan_remote_clicked),
	(open_file_cb), (scan_folder_cb):
	
	Starting Gio migration

2008-04-14  Fabio Marzocca  <thesaltydog@gmail.com>
