@@ -42,7 +42,8 @@ void open_nautilus (GtkMenuItem *, gpointer );
 void set_label_scan (baobab_fs *);
 void show_label (void);
 void open_file_with_application (GFile *file);
-gboolean trash_file (const gchar *filename);
+gboolean can_trash_file (GFile *file);
+gboolean trash_file (GFile *file);
 void contents_changed (void);
 void set_glade_widget_sens (const gchar *name, gboolean sens);
 gchar *baobab_gconf_get_string_with_default (GConfClient *client, const gchar *key, const gchar *def);
